Resolve scss switch and overflow for bulma style

--- a/front/src/style/bulma-enhance.css
+++ b/front/src/style/bulma-enhance.css
@@ -27,3 +27,9 @@
     font-size: 1.3rem;
     font-weight: 300;
 }
+
+html {
+    font-family: "Segoe UI", serif !important;
+    overflow-x: visible !important;
+    overflow-y: visible !important;
+}
